Fixed hover color shifts

--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -119,6 +119,7 @@ input[type='number'] {
 
 	&::-webkit-inner-spin-button, 
 	&::-webkit-outer-spin-button { 
+		-webkit-appearance: none;
 		appearance: none;
 		margin: 0;
 	}
@@ -243,7 +244,7 @@ button {
 	padding: 0 1em;
 
 	&:hover {
-		background-color: lighten(@primary-color, 15%);
+		background-color: lighten(@primary-color, 5%);
 	}
 
 	&:active {
